Provide additional properties (#18470)
Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>